--- a/QQRobot/QQRobot.csproj
+++ b/QQRobot/QQRobot.csproj
@@ -8,7 +8,7 @@
     <RootNamespace>QQRobot</RootNamespace>
     <Company />
     <Authors>SharedInfo.Authors</Authors>
-    <Version>1.0.1</Version>
+    <Version>2.0.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>SharedInfo.CopyRight</Copyright>
     <PackageProjectUrl>SharedInfo.PackageProjectUrl</PackageProjectUrl>
@@ -18,7 +18,8 @@
     <PackageId>SharedInfo.AppName</PackageId>
     <RuntimeIdentifiers>linux-arm;linux-x64;osx-x64;win-x64;win-arm64</RuntimeIdentifiers>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <ApplicationIcon />
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <StartupObject>QQRobot.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
