--- a/QQRobot/config.ini
+++ b/QQRobot/config.ini
@@ -1,12 +1,24 @@
-﻿[config]
-;qq机器人名字
-qqbotName = miyu
-;qq机器人类型，1=图灵机器人，2=复读机I型，3=复读机II型
-qqbotType = 1
+﻿[GlobalConfig]
+;机器人名字
+BotName = miyu
+;机器人类型
+BotType = 2
 ;工作群组，以","分隔
-workGroup = 测试专用,测试2
+WorkGroup = 测试2
+
+;机器人类型列表
+[BotTypes]
+0 = Turing
+1 = Repeat
+2 = Test
 
 ;图灵机器人设置
-turing.api = http://openapi.tuling123.com/openapi/api
+[Turing]
+Api = http://openapi.tuling123.com/openapi/api
 ;http://www.tuling123.com/openapi/api/v2
-turing.key = 3abbaecbb5fe4785b6694ef1afcec83d
+Key = 3abbaecbb5fe4785b6694ef1afcec83d
+
+;复读机I型设置
+[Repeat]
+;几率，百分比
+Probability = 10
