--- a/QQRobot/config.ini
+++ b/QQRobot/config.ini
@@ -18,7 +18,7 @@ Api = http://openapi.tuling123.com/openapi/api
 ;http://www.tuling123.com/openapi/api/v2
 Key = 3abbaecbb5fe4785b6694ef1afcec83d
 
-;复读机I型设置
+;复读机
 [Repeat]
 ;几率，百分比
 Probability = 10
